# school21_ALL

./: README.md
C3_SimpleBashUtils-3/src/cat/: s21_cat.c  test_3.txt  test_5.txt  tests_2.txt
C3_SimpleBashUtils-3/src/grep/: s21_grep.h
C5_s21_decimal-3/src/: Makefile  s21_decimal.h
C5_s21_decimal-3/src/HEADERS/: s21_arithmetics.h  s21_convertors.h  s21_other.h
C5_s21_decimal-3/src/arithmetics/: s21_add.c  s21_mod.c  s21_sub.c
C5_s21_decimal-3/src/auxiliary/: s21_auxiliary.c
C5_s21_decimal-3/src/convertors/: s21_from_decimal_to_float.c  s21_from_float_to_decimal.c
C5_s21_decimal-3/src/other/: s21_copy.c  s21_floor.c  s21_negate.c  s21_reset.c  s21_round.c
C6_s21_matrix-1-develop/src/: Makefile  s21_matrix.h
C6_s21_matrix-1-develop/src/function/: s21_arithmetics.c  s21_comparison.c  s21_matrix.c  s21_others.c  s21_transformations.c
C6_s21_matrix-1-develop/src/tests/: personal.c
C7_BrickGame_v1.0-1/src/: Makefile
C7_BrickGame_v1.0-1/src/doc/: index.html
C7_BrickGame_v1.0-1/src/tests/: tetris_tests.c
CPP1_s21_matrixplus-1/src/: CMakeLists.txt  Makefile
CPP1_s21_matrixplus-1/src/headers/: s21_matrix_oop.h
CPP1_s21_matrixplus-1/src/main/: s21_matrix_opp.cpp
CPP1_s21_matrixplus-1/src/tests/: s21_matrix_test.cpp
DO2_LinuxNetwork-1/src/: report (1).md
DO5_SimpleDocker-1/src/: Simple Docker.md
DO6_CICD-1/: deploy.sh
DO6_CICD-1/src/: Makefile  tlgbot.sh
DO6_CICD-1/src/cat/: s21_cat.h  test_4.txt  test_case_cat.txt  tests_1.txt
DO6_CICD-1/src/grep/: s21_grep.c  test_1.txt
DO6_CICD-1/src/screenshots/: CICD.md
(+4 files in other folders)
